Refactor backend configuration